tests/cases/syntax/error/types/number-type.soccam
(module number-type soccam
  (decl ([x 3])
    (:= x 1)))